# Games_from_scratch_c-

./: README.md
Computer_graphics/: .gitignore
ConsoleFPS_game/: ConsoleFPS_game.cpp  ConsoleFPS_game.sln  ConsoleFPS_game.vcxproj  ConsoleFPS_game.vcxproj.filters
Data_STruc_ALgo/: big_o_exampl.cpp  insertion_in_single_link_list.cpp  link_list.cpp  link_list_weak_shared_ptr.cpp  structure_single_link_list.cpp
Libs/: makefile
Lost_Fortune_chp1/: Readme.md
audio_programming/: README.md
minesweeper_game/: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  MinesweeperGame.sln  MinesweeperGame.vcxproj  MinesweeperGame.vcxproj.filters  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  vcpkg.json
minesweeper_game/MinesweeperGame.dir/Debug/: MinesweeperGame.exe.recipe  MinesweeperGame.ilk
minesweeper_game/MinesweeperGame.dir/Debug/MinesweeperGame.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
minesweeper_game/src/: main.cpp
minesweeper_game/src/headers/: Window.hpp
minesweeper_game/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
minesweeper_game/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.read.1.tlog
minesweeper_game/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
minesweeper_game/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
(+177 files in other folders)
